fix: headerless layout respects dark mode

--- a/web-application/client/app.css
+++ b/web-application/client/app.css
@@ -286,9 +286,6 @@ body {
     overflow-y: auto;
     overflow-wrap: break-word;
 }
-body.android, body.ios {
-    padding-top: 40px;
-}
 
 a:link, a:active, a:visited {
     text-decoration: none;
